--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -71,8 +71,9 @@
 									<div id="validationServer02Feedback" class="invalid-feedback">
 										Please provide a valid password.</div>
 								</div>
-
 								<button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+								<hr class="my-4">
+								Don't have an account? <a th:href=@{/registration}>Sign Up</a>
 								<hr class="my-4">
 								<button type="button" class="btn btn-outline-primary"
 									onclick="docDisFunction()">Sign in as Doctor</button>
@@ -113,7 +114,7 @@
 								</div>
 
 								<button class="btn btn-secondary btn-lg btn-block" type="submit">Login</button>
-							
+
 								<hr class="my-4">
 								<button type="button" class="btn btn-outline-secondary"
 									onclick="patDisFunction()">Sign in as Patient</button>
@@ -154,7 +155,7 @@
 
 								</div>
 								<button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-				
+
 								<hr class="my-4">
 								<button type="button" class="btn btn-outline-secondary"
 									onclick="patDisFunction()">Sign in as Patient</button>
