--- a/src/main/resources/templates/adminLoginPage.html
+++ b/src/main/resources/templates/adminLoginPage.html
@@ -24,28 +24,27 @@
 				<div class="col-12 col-md-8 col-lg-6 col-xl-5">
 					<div class="card shadow-2-strong" style="border-radius: 1rem;">
 						<div class="card-body p-5 text-center">
-							<form name="adminLoginForm" onsubmit="adminLoginPage()">
+							<form name="adminLoginForm" onsubmit="adminLoginPage()"
+								action="javascript:void(0)">
 
 								<h3>Admin's Sign in Page</h3>
-								<h6 class="mb-5">Please Enter your Email and Password to
+								<h6 class="mb-5">Please Enter your Username and Password to
 									Login</h6>
 
 								<div class="form-outline mb-2">
-									<label class="form-label" for="adminEmail">Email</label> <input
-										type="email" name="email" id="adminEmail"
-										class="form-control form-control-rg "
-										placeholder="Email" aria-describedby="adminEmailFeedback"
-										required="required" />
+									<label class="form-label" for="adminEmail">Username</label> <input
+										type="text" name="email" id="adminEmail"
+										class="form-control form-control-rg " placeholder="Username"
+										aria-describedby="adminEmailFeedback" required="required" />
 									<div id="adminEmailFeedback" class="invalid-feedback">
-										Please provide a valid email.</div>
+										Please provide a valid Username.</div>
 
 								</div>
 
 								<div class="form-outline mb-4">
 									<label class="form-label" for="adminPassword">Password</label>
 									<input type="password" name="password" id="adminPassword"
-										class="form-control form-control-rg"
-										placeholder="Password"
+										class="form-control form-control-rg" placeholder="Password"
 										aria-describedby="adminPasswordFeedback" required="required" />
 									<div id="adminPasswordFeedback" class="invalid-feedback">
 										Please provide a valid password.</div>
@@ -59,28 +58,12 @@
 			</div>
 		</div>
 	</section>
-	<script>
-		function adminLoginPage() {
-
-			var canLogin = false;
-			var email = document.getElementById("adminEmail").value;
-			var password = document.getElementById("adminPassword").value;
-
-			if (email === "joy@capg.com" && password === "@qwerty") {
-				alert("Login Successful");
-				localStorage.setItem("admin", JSON.stringify({
-					name : "Joy",
-					email : "joy@joy.com",
-					password : "@qwerty",
-					role : "admin"
-				}));
-				window.location.href = "/admin", true;
-				document.forms['adminLoginForm'].reset();
-				return false;
-			} else {
-				alert("email or password incorrect, please try again");
-			}
-		}
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js"
+		th:src="@{/mainjs.js}">
+		
 	</script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
