--- a/src/main/resources/templates/appointmentPerDoctor.html
+++ b/src/main/resources/templates/appointmentPerDoctor.html
@@ -24,8 +24,8 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a th:href="@{/receptionist}"> <i
-					class='bx bx-grid-alt'></i> <span class="links_name">Dashboard</span>
+			<li><a th:href="@{/receptionist}"> <i class='bx bx-grid-alt'></i>
+					<span class="links_name">Dashboard</span>
 			</a></li>
 			<li><a th:href="@{/receptionist/deleteAppointment}"> <i
 					class='bx bx-box'></i> <span class="links_name">Delete </span>
@@ -65,44 +65,10 @@
 		</nav>
 
 		<div class="home-content">
-			<div class="overview-boxes">
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Users</div>
-						<div class="number">40,876</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Doctors</div>
-						<div class="number">38,876</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Fees Received</div>
-						<div class="number">$12,876</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Fees Pending</div>
-						<div class="number">11,086</div>
-						<div class="indicator"></div>
-					</div>
-
-				</div>
-			</div>
 
 			<div class="sales-boxes">
 				<div class="recent-sales box">
-					<div class="title">Appointments for the day</div>
+					<div class="title">Appointments</div>
 					<div class="sales-details">
 						<ul class="details">
 							<li class="topic">Date</li>
@@ -149,19 +115,13 @@
 				<div class="top-sales box">
 					<div class="title">Doctor Available</div>
 					<ul class="top-sales-details">
-						<li><a href="#"> <span class="product">Dr Gulati</span>
+						<li th:each="doc: ${doctors}"><a href="#"> <span
+								class="product" th:text="${'Dr. '+doc.name}"></span>
 						</a>
 							<div class="form-check form-switch">
 								<input class="form-check-input" type="checkbox" role="switch"
-									id="flexSwitchCheckChecked" checked> <label
-									class="form-check-label" for="flexSwitchCheckChecked"></label>
-							</div></li>
-						<li><a href="#"><i class="fa-solid fa-user-tie-hair-long"></i>
-								<span class="product">Dr Nidhi</span> </a>
-							<div class="form-check form-switch">
-								<input class="form-check-input" type="checkbox" role="switch"
-									id="flexSwitchCheckChecked" checked> <label
-									class="form-check-label" for="flexSwitchCheckChecked"></label>
+									id="flexSwitchCheckChecked" th:checked="${doc.status}">
+								<label class="form-check-label" for="flexSwitchCheckChecked"></label>
 							</div></li>
 					</ul>
 				</div>
