--- a/src/main/resources/static/style2.css
+++ b/src/main/resources/static/style2.css
@@ -183,7 +183,8 @@ nav .profile-details i{
 .home-content .overview-boxes{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 24px;
   flex-wrap: wrap;
   padding: 0 20px;
   margin-bottom: 26px;
